# qsafe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NEXT_CYCLE.md  NOTICE.md  README.md  SECURITY.md  deny.toml  install.sh
.bkit-snapshot/: README.md
.bkit-snapshot/audit/: 2026-05-27.jsonl  2026-05-28.jsonl
.bkit-snapshot/runtime/: control-state.json  error-log.json  first-run-seen.json  hook-reachability.json  otel-env.json  session-ctx-fp.json  token-ledger.ndjson
.bkit-snapshot/state/: memory.json  pdca-status.json  session-history.json
.github/workflows/: ci.yml  release.yml
conversations/: 09445ea6-321a-41fc-aca4-d8a3ec81678c.jsonl  README.md
crates/qsafe-cli/: Cargo.toml
crates/qsafe-cli/src/: config.rs  credentials.rs  main.rs
crates/qsafe-cli/tests/: e2e.rs
crates/qsafe-core/: Cargo.toml
crates/qsafe-core/src/: compress.rs  envelope.rs  error.rs  format.rs  integrity.rs  io.rs  lib.rs  stream.rs
crates/qsafe-crypto/: Cargo.toml
crates/qsafe-crypto/src/: error.rs  lib.rs  password.rs
crates/qsafe-crypto/tests/: security.rs
crates/qsafe-formats/: Cargo.toml
crates/qsafe-formats/src/: brotli_fmt.rs  bz2.rs  detect.rs  error.rs  gz.rs  lib.rs  lz4.rs  path_safety.rs  rar.rs  sevenz.rs  tar_fmt.rs  xz.rs  zipformat.rs  zstd_fmt.rs
crates/qsafe-gui/: Cargo.toml  build.rs  tauri.conf.json
crates/qsafe-gui/icons/: icon.icns
crates/qsafe-gui/install/: README.md  install-linux.sh  install-macos.sh  install-windows.ps1  qsafe-mime.xml  qsafe.desktop  qsafe.thumbnailer
crates/qsafe-gui/src/: commands.rs  main.rs
crates/qsafe-gui/ui/: i18n.js  index.html
crates/qsafe-gui/ui/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  zh.json
crates/qsafe-hardware/: Cargo.toml
crates/qsafe-hardware/src/: backend.rs  error.rs  hw.rs  lib.rs  recipient.rs
crates/qsafe-hardware/tests/: multi_recipient.rs
crates/qsafe-identity/: Cargo.toml
crates/qsafe-identity/src/: error.rs  identity.rs  lib.rs  recipient.rs
crates/qsafe-paper/: Cargo.toml
crates/qsafe-paper/src/: error.rs  lib.rs  recipient.rs
crates/qsafe-shamir/: Cargo.toml
crates/qsafe-shamir/src/: error.rs  lib.rs  share.rs
crates/qsafe-stub/: Cargo.toml
crates/qsafe-stub/src/: lib.rs  main.rs
docs/: CRYPTO-SPEC.md  THREAT-MODEL.md
scripts/: audit.py
