[package]
name = "qsafe-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "qsafe crypto: recipient implementations (Password, FIDO2, Pubkey, Shamir...)"

[dependencies]
qsafe-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
chacha20poly1305.workspace = true
argon2.workspace = true
rand.workspace = true
zeroize.workspace = true
hkdf.workspace = true
sha2.workspace = true

[features]
default = ["password"]
password = []
