[package]
name = "qsafe-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "qsafe GUI — graphical front-end for the qsafe CLI (Tauri)"

[[bin]]
name = "qsafe-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
qsafe-core.workspace = true
qsafe-crypto.workspace = true
qsafe-paper.workspace = true
qsafe-shamir.workspace = true
qsafe-identity.workspace = true
qsafe-formats.workspace = true
tauri = { version = "2", features = ["compression", "devtools"] }
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json = "1"
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
zeroize.workspace = true
hex.workspace = true
bip39 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
md-5 = "0.10"
# R16: About 모달의 "업데이트 확인" 버튼 — GitHub Releases API 호출 (blocking, tokio 없음)
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
# R30: cancel_running_job 의 SIGTERM 발사 (Unix 전용). Windows 는 taskkill 사용.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
