[package]
name = "qsafe-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "qsafe identity (X25519 + ML-KEM-768 hybrid pubkey recipient)"

[dependencies]
qsafe-core = { path = "../qsafe-core" }
thiserror.workspace = true
tracing.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
rand_core.workspace = true
zeroize.workspace = true
hkdf.workspace = true
sha2.workspace = true
hex.workspace = true
serde.workspace = true
serde_bytes.workspace = true
x25519-dalek.workspace = true
ml-kem.workspace = true
