[package]
name = "qsafe-shamir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shamir M-of-N secret sharing — 분산 백업 (종이/USB)"

[dependencies]
qsafe-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
blahaj.workspace = true
rand.workspace = true
zeroize.workspace = true
hex.workspace = true
